Modified background color to fix a color contrast ratio issue

--- a/src/Microsoft.IIS.Administration/wwwroot/css/main.css
+++ b/src/Microsoft.IIS.Administration/wwwroot/css/main.css
@@ -34,7 +34,7 @@ a {
 }
 
 a:hover {
-    color:#0094ff;
+    color:#0077ce;
 }
 
 a:focus {
